# js_image_layer_repro

./: BUILD.bazel  MODULE.bazel  main.js  package.json
