load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "js_image_layer_repro",
    srcs = [
        "package.json",
        "main.js",
    ],
    package = "js_image_layer_repro",
    visibility = ["//visibility:public"],
)

js_binary(
    name = "bin",
    data = ["main.js"],
    entry_point = "main.js",
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

js_image_layer(
    name = "layers",
    binary = ":bin",
    platform = ":linux_amd64",
    root = "/app",
)
