bazel_dep(name = "rules_oci", version = "1.3.2")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "ubuntu_image",
    digest = "sha256:c6871ae8b54fb3ed0ba4df4eb98527e9a6692088fe0c2f2260a9334853092b47",
    image = "public.ecr.aws/ubuntu/ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(oci, "ubuntu_image")

bazel_dep(name = "rules_nodejs", version = "6.0.2")
bazel_dep(name = "aspect_rules_js", version = "1.33.1")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "18.16.0")
